css:fixed the 600px high tds in the homepage on ie and opera

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,6 @@ table {
 	width: 100%;
 	margin-bottom: 10px;
 	border-collapse: collapse;
-	min-height:600px;
 }
 table caption {
 	margin-top: 10px;
@@ -278,3 +277,4 @@ button:hover {
 	font-size:250%;
 	font-variant:small-caps;
 }
+
